# emailapi

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  sendMail.cpp  sendMail.h
